# phoebe

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  start.bat  start.sh
.claude/agents/: phoebe.md
.claude/skills/recall/: SKILL.md
scripts/: investigate.sh
src/phoebe/: __init__.py  investigate.py  models.py  reasoning.py  schema.py  server.py  store.py  tome.py
src/phoebe/dashboard/: app.py
src/phoebe/tools/: __init__.py  _shared.py  add_epic.py  add_story.py  blast_radius.py  brief.py  create_plan.py  get_plan.py  recall.py  remember.py  stats.py  trace.py  update_story.py  who_knows.py
tests/: ab_test_gil.py  test_ab_investigate.py  test_tome.py
tests/benchmarks/: REAL_AB_TEST.md
tests/benchmarks/findings/: RESEARCH_FINDINGS.md
