[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phoebe"
version = "0.1.0"
description = "Multimodal knowledge engine — stores memories, not files"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "ladybugdb>=0.15.1",
    "mcp[cli]>=1.0.0",
]

[project.scripts]
phoebe = "phoebe.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/phoebe"]
